--- a/styles.css
+++ b/styles.css
@@ -1,34 +1,42 @@
+:root{
+    --text: #010f10;
+    --background: #f3ebdb;
+    --primary: #45C8D7;
+    --secondary: #8eebc6;
+    --accent: #fff5e6;
 
+}
+body::-webkit-scrollbar{
+    width: 0.70rem;
+    background: #ffeed6;
+}
+body::-webkit-scrollbar-track{
+    margin-block: 3vh;
+    border-radius: 100vh;
+    background: #ffeed6;
+}
+body::-webkit-scrollbar-thumb{
+    border-radius: 100vh;
+    background: #8eebc6;
+}
+body::-webkit-scrollbar-thumb:hover{
+    border-radius: 100vh;
+    background: #ffeed6;
+    border: .2ch solid #8eebc6;
+}
 html{
-    --text: #181202;
-    --background: #F3EBDB;
-    --primary: #4e24a1;
-    --secondary: #76e3fe;
-    --accent: #ff7700;
+    /*--text: #181202;*/
+    /*--background: #F3EBDB;*/
+    /*--primary: #4e24a1;*/
+    /*--secondary: #76e3fe;*/
+    /*--accent: #ff7700;*/
     height: 100%;
 }
-/*body{*/
-/*  margin: 0;*/
-/*}*/
-/*!*main{*!*/
-/*!*  background: black;*!*/
-/*!*}*!*/
-/*.bodyWrap{*/
-/*  width: 100vw;*/
-/*  height: 100vh;*/
-/*  overflow: hidden;*/
-/*  background-color: red;*/
-/*}*/
-/*.bodyBg{*/
-/*  background-color: black;*/
-/*  width: 100%;*/
-/*  height: 100%;*/
-/*  margin: 0;*/
-/*  position: absolute;*/
-/*  overflow: hidden;*/
-/*  */
-/*  !*padding: 5rem;*!*/
-/*}*/
+.div1{
+
+    margin-left: 5rem;
+    padding: 1rem;
+}
 body{
     height: 100%;
     --text: #010f10;
@@ -45,26 +53,15 @@ body{
 /*}*/
 .body-wrap {
 
-    width: 100vw;
-    height: 100vh;
+        width: 100vw;
+        height: 100vh;
     overflow: hidden;
 
 }
-/*.bg{*/
-/*    opacity: 1;*/
-/*    position: absolute;*/
-/*    left: 0;*/
-/*    top: 0;*/
-/*    width: 100vw;*/
-/*    height: 100vh;*/
-/*    background: linear-gradient(180deg, rgba(243, 235, 219, 0.42) 0%, rgba(25, 33, 43, 0) 100%);*/
-/*    !*background: repeating-linear-gradient(-45deg, #ffd28a, #ffd28a 20px, #232323 20px, #232323 100px) no-repeat center;*!*/
-/*    background-size: cover;*/
-/*}*/
 .blobBackground {
     background-color: #232323;
     /*background: repeating-linear-gradient( -45deg, #ffd28a, #ffd28a 20px, #232323 20px, #232323 100px );*/
-    background-image: url("assets/blobBgPurp.svg");
+    background-image: url("assets/blob-scene-haikei (1).svg");
     opacity: 1;
     position: absolute;
     left: 0;
@@ -74,7 +71,6 @@ body{
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-
 }
 
 .content {
@@ -91,8 +87,8 @@ body{
 }
 
 .active {
-    height: 100%;
-    display: block;
+    background-color: #181202;
+    color: white;
 }
 .gridContainer{
 
@@ -110,19 +106,68 @@ body{
     width: 100%;
 }
 
-@media only screen and (min-width: 768px) {
-    /* For desktop: */
-    .col-1 {width: 8.33%;}
-    .col-2 {width: 16.66%;}
-    .col-3 {width: 25%;}
-    .col-4 {width: 33.33%;}
-    .col-5 {width: 41.66%;}
-    .col-6 {width: 50%;}
-    .col-7 {width: 58.33%;}
-    .col-8 {width: 66.66%;}
-    .col-9 {width: 75%;}
-    .col-10 {width: 83.33%;}
-    .col-11 {width: 91.66%;}
-    .col-12 {width: 100%;}
+.parent {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: .1fr 1fr .1fr;
+    grid-template-rows: .3fr 1fr .15fr;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
 }
 
+.parent > div{
+    border: 2px solid red;
+    width: 100%;
+    height: 100%;
+    margin: auto;
+}
+
+.menu{
+
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    font-size: 1.5rem;
+}
+
+.menu > ul{
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    list-style: none;
+    height: 100%;
+    line-height: 4em;
+    background-color: rgba(255, 247, 238, 0.55);
+}
+
+li a{
+
+    padding: 0 0;
+    width: 100%;
+    background-color: rgba(142, 235, 198, 0.38);
+    color: #181202;
+    display: block;
+    text-decoration: none;
+    transition: 300ms;
+    border-bottom: .2rem solid #232323;
+}
+li a:hover{
+    background-color: rgba(35, 35, 35, 0.85);
+    color: #F3EBDB;
+}
+
+
+
+.div1 { grid-area: 2 / 2 / 3 / 3; }
+.div2 { grid-area: 1 / 2 / 2 / 3; }
+.div3 { grid-area: 1 / 1 / 2 / 2; }
+.div4 {
+
+    background-color: rgba(255, 255, 255, 0.07);
+    grid-area: 2 / 1 / 3 / 2; }
+.div5 { grid-area: 1 / 3 / 2 / 4; }
+.div6 { grid-area: 2 / 3 / 3 / 4; }
+.div7 { grid-area: 3 / 3 / 4 / 4; }
+.div8 { grid-area: 3 / 2 / 4 / 3; }
+.div9 { grid-area: 3 / 1 / 4 / 2; }
