--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,19 @@
 :root{
-    --text: #010f10;
-    --background: #f3ebdb;
-    --primary: #45C8D7;
-    --secondary: #8eebc6;
-    --accent: #fff5e6;
-
+    font-family: "Montserrat Alternates", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 22px;
+    --text: #0b0b0c;
+    --background: #f9fffe;
+    --primary: #ffeed6;
+    --secondary: #790c30;
+    --accent: #00ff8c;
+}
+body{
+    color: black;
+    background-color: #ffeed6;
+    margin: 0;
+    padding: 0;
 }
 body::-webkit-scrollbar{
     width: 0.70rem;
@@ -17,157 +26,104 @@ body::-webkit-scrollbar-track{
 }
 body::-webkit-scrollbar-thumb{
     border-radius: 100vh;
-    background: #8eebc6;
+    background: #790c30;
 }
 body::-webkit-scrollbar-thumb:hover{
     border-radius: 100vh;
     background: #ffeed6;
-    border: .2ch solid #8eebc6;
+    border: .2ch solid #790c30;
 }
-html{
-    /*--text: #181202;*/
-    /*--background: #F3EBDB;*/
-    /*--primary: #4e24a1;*/
-    /*--secondary: #76e3fe;*/
-    /*--accent: #ff7700;*/
-    height: 100%;
-}
-.div1{
+main{
 
     margin-left: 5rem;
     padding: 1rem;
 }
-body{
-    height: 100%;
-    --text: #010f10;
-    --background: #f3ebdb;
-    --primary: #45C8D7;
-    --secondary: #8eebc6;
-    --accent: #fff5e6;
 
-    margin: 0;
-}
 
-/*main{*/
-/*  background: black;*/
-/*}*/
-.body-wrap {
-
-        width: 100vw;
-        height: 100vh;
-    overflow: hidden;
-
+.navbar{
+    position: fixed;
+    transition: 400ms ease;
+    background-color: var(--secondary);
 }
-.blobBackground {
-    background-color: #232323;
-    /*background: repeating-linear-gradient( -45deg, #ffd28a, #ffd28a 20px, #232323 20px, #232323 100px );*/
-    background-image: url("assets/blob-scene-haikei (1).svg");
-    opacity: 1;
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100vw;
-    height: 100vh;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.content {
-    height: 100% ;
-    width: 100%;
-    position: relative;
-}
-.page {
-    height: 100%;
-    display: none;
-
-    background: rgb(255,255,255);
-    background: linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(243,235,219,0.10136554621848737) 10%, rgba(78,36,161,0.5159313725490196) 100%);
-}
-
-.active {
-    background-color: #181202;
-    color: white;
-}
-.gridContainer{
-
-}
-.layout {
-    width: 100vw;
-    height: 100vh;
-    display: grid;
-}
-.tile{
-
-}
-/* For mobile phones: */
-[class*="col-"] {
+.nav-item{
     width: 100%;
 }
+.nav-item:last-child{
+    margin-top: auto;
 
-.parent {
-    width: 100%;
-    height: 100%;
-    display: grid;
-    grid-template-columns: .1fr 1fr .1fr;
-    grid-template-rows: .3fr 1fr .15fr;
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
 }
-
-.parent > div{
-    border: 2px solid red;
-    width: 100%;
-    height: 100%;
-    margin: auto;
-}
-
-.menu{
-
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    font-size: 1.5rem;
-}
-
-.menu > ul{
-    margin: 0;
-    padding: 0;
-    width: 100%;
+.navbar-nav{
     list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     height: 100%;
-    line-height: 4em;
-    background-color: rgba(255, 247, 238, 0.55);
 }
+.nav-link{
 
-li a{
 
-    padding: 0 0;
-    width: 100%;
-    background-color: rgba(142, 235, 198, 0.38);
-    color: #181202;
-    display: block;
+    filter: hue-rotate(55deg) saturate(.25) brightness(6.5) opacity(.95);
+    display: flex;
+    align-items: center;
+    height: 5rem;
     text-decoration: none;
-    transition: 300ms;
-    border-bottom: .2rem solid #232323;
-}
-li a:hover{
-    background-color: rgba(35, 35, 35, 0.85);
-    color: #F3EBDB;
+    transition: 500ms ;
 }
 
+.nav-link:hover{
+    filter: hue-rotate(30deg) saturate(.75) brightness(8) opacity(1);
+}
 
+.link-text{
+    color: #790c30;
+    filter: opacity(0) blur(30px)   ;
+    margin-left: 1rem;
+    transition: .5s;
+}
+.nav-link svg{
+    /*filter: brightness(800%);*/
+    fill: #790c30;
+    min-width: 2rem;
+    margin: 0 1.5rem;
+    width: 2rem;
 
-.div1 { grid-area: 2 / 2 / 3 / 3; }
-.div2 { grid-area: 1 / 2 / 2 / 3; }
-.div3 { grid-area: 1 / 1 / 2 / 2; }
-.div4 {
+}
 
-    background-color: rgba(255, 255, 255, 0.07);
-    grid-area: 2 / 1 / 3 / 2; }
-.div5 { grid-area: 1 / 3 / 2 / 4; }
-.div6 { grid-area: 2 / 3 / 3 / 4; }
-.div7 { grid-area: 3 / 3 / 4 / 4; }
-.div8 { grid-area: 3 / 2 / 4 / 3; }
-.div9 { grid-area: 3 / 1 / 4 / 2; }
+@media only screen and (min-width: 600px) {
+    .navbar{
+        top: 0;
+        width: 5rem;
+        height: 100vh;
+    }
+    .navbar:hover{
+        width: 15rem;
+    }
+    .navbar:hover .link-text{
+        filter: opacity(1);
+        display: block;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .navbar .link-text{
+        filter: opacity(1);
+        display: none;
+    }
+    .navbar{
+        bottom: 0;
+        width: 100vh;
+        height: 5rem;
+    }
+    .navbar-nav{
+        flex-direction: row;
+    }
+    .nav-link{
+        justify-content: center;
+    }
+
+    main{
+        margin: 0   ;
+    }
+}
