--- a/styles.css
+++ b/styles.css
@@ -91,6 +91,11 @@ main{
 
 }
 
+.active {
+    background-color: #181202;
+    color: white;
+}
+
 @media only screen and (min-width: 600px) {
     .navbar{
         top: 0;
