--- a/styles.css
+++ b/styles.css
@@ -91,11 +91,17 @@ main{
 
 }
 
+
+.page{
+    display: none;
+
+}
 .active {
+    display: block;
     background-color: #181202;
     color: white;
+    opacity: 1;
 }
-
 @media only screen and (min-width: 600px) {
     .navbar{
         top: 0;
