--- a/styles.css
+++ b/styles.css
@@ -94,13 +94,14 @@ main{
 
 .page{
     display: none;
-
+    transition: .5s;
 }
 .active {
     display: block;
     background-color: #181202;
     color: white;
     opacity: 1;
+    transition: .5s;
 }
 @media only screen and (min-width: 600px) {
     .navbar{
