--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,7 @@ main{
     margin-left: 1rem;
     transition: .5s;
 }
+.link-text:hover.dropdown-content{display:block;}
 .nav-link svg{
     /*filter: brightness(800%);*/
     fill: #790c30;
@@ -116,6 +117,9 @@ main{
         filter: opacity(1);
         display: block;
     }
+    .navbar:hover .dropdown-content{
+        display: block;
+    }
 }
 
 @media only screen and (max-width: 600px) {
@@ -139,3 +143,19 @@ main{
         margin: 0   ;
     }
 }
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #790c30;
+    min-width: 160px;
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  .dropdown-content a:hover {background-color: #ddd;}
+  
