--- a/styles.css
+++ b/styles.css
@@ -123,6 +123,84 @@ main {
     /*border: 5px solid black;*/
 }
 
+.largerChevron{
+    position: absolute;
+    bottom: -40%;
+    font-size: 2rem;
+}
+.dropdown-content {
+    filter: opacity(0) blur(30px);
+    position: absolute;
+    background-color: #790c30;
+    width: 9.5rem; /*Keep this synced too.*/
+    transition: 600ms;
+    z-index: 1;
+    pointer-events: none;
+    left: 11rem; /*Keep this synced with values in main.js file for the hovering effect to avoid clipping*/
+}
+
+/*.dropdown-content a {*/
+
+/*    color: #790c30;*/
+/*    padding: 12px 16px;*/
+/*    text-decoration: none;*/
+/*    display: block;*/
+/*    background-color: #ffeed6;*/
+/*}*/
+
+/*.dropdown-content a:hover {*/
+/*    color: #ffeed6;*/
+/*    background-color: #790c30;*/
+
+/*}*/
+.dropdownTile {
+
+    color: #790c30;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    background-color: #ffeed6;
+}
+
+.dropdownTile:hover {
+    cursor: pointer;
+    color: #ffeed6;
+    background-color: #790c30;
+
+}
+
+.categoriesButton{
+
+}
+.categoriesBarCloseBtn{
+
+    cursor: pointer;
+    color: #ffeed6;
+    font-size: 1.5rem;
+    position: relative;
+    top: 50%;
+    left: 90%;
+    background-color: rgba(121, 12, 48, 0.13);
+    padding: .25ch .75ch;
+    height: fit-content;
+    width: fit-content;
+    justify-content: center;
+    text-align: center;
+    transition: 450ms;
+}
+.categoriesBarCloseBtn:hover{
+    background-color: #790c30;
+}
+.categoriesBar{
+    right : -100vw;
+    transition: 450ms;
+    position: fixed;
+    color: #00ff8c;
+    background-color: #181202;
+    height: 100vh;
+    width: 5px;
+}
+
 @media only screen and (min-width: 600px) {
     .navbar {
         padding-right: .5rem;
@@ -180,35 +258,5 @@ main {
         margin: 0;
     }
 }
-.largerChevron{
-    position: absolute;
-    bottom: -40%;
-    font-size: 2rem;
-}
-.dropdown-content {
-    filter: opacity(0) blur(30px);
-    position: absolute;
-    background-color: #790c30;
-    width: 9.5rem; /*Keep this synced too.*/
-    transition: 600ms;
-    z-index: 1;
-    pointer-events: none;
 
-    left: 11rem; /*Keep this synced with values in main.js file for the hovering effect to avoid clipping*/
-}
-
-.dropdown-content a {
-
-    color: #790c30;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    background-color: #ffeed6;
-}
-
-.dropdown-content a:hover {
-    color: #ffeed6;
-    background-color: #790c30;
-
-}
   
