--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,10 @@ body::-webkit-scrollbar-thumb:hover {
     border: .2ch solid #790c30;
 }
 
+html{
+    overflow-y:scroll;
+}
+
 main {
 
     margin-left: 5rem;
@@ -108,9 +112,11 @@ main {
 }
 
 .active {
+    width: 100%;
+
     margin: 0;
     display: block;
-    background-color: #181202;
+    background-color: rgba(24, 18, 2, 0.76);
     color: white;
     opacity: 1;
     transition: .5s;
@@ -257,8 +263,8 @@ main {
     flex-direction: row;
     flex-wrap: wrap;
     align-content: flex-start;
-
-    background-color: #0b0b0c;
+    border-radius: 10px;
+    background-color: rgba(11, 11, 12, 0.56);
     height: 100%;
     padding: 15px;
     gap: 5px;
@@ -300,19 +306,23 @@ main {
     gap: 5px;
 }
 .cocktailsImage{
+    user-select: none;
     width: 5rem;
     height: 5rem;
 }
 
 .cocktailsDataDrink{
-
+    cursor: pointer;
     font-size: .8rem;
     p{
         font-size: .5em;
     }
-    border: 1px solid red;
+    transition: 175ms ease-out;
  }
-
+.cocktailsDataDrink:hover{
+    background-color: #0b0b0c;
+    color: #ffeed6;
+}
 @media only screen and (min-width: 600px) {
     .cocktailsData{
         display: grid;
