--- a/styles.css
+++ b/styles.css
@@ -199,6 +199,7 @@ main {
 }
 
 .categoriesBar{
+    z-index: 1;
     right : -100vw;
     transition: 450ms;
     position: fixed;
@@ -307,8 +308,6 @@ main {
     gap: 5px;
 }
 .cocktailsImage{
-    position: relative;
-    display: block;
     filter: brightness(90%);
     user-select: none;
     width: 7rem;
@@ -335,6 +334,66 @@ main {
 .cocktailsDataDrink:hover{
     background-color: rgba(11, 11, 12, 0.69);
     color: #ffeed6;
+}
+
+
+.cocktailInfoPage{
+
+    z-index: 101;
+    text-align: center;
+    display: none;
+    margin: auto;
+    padding-top:1.5rem ;
+    padding-bottom:5.5rem ;
+    height: 100vh;
+    width: 100%;
+    overflow-y: scroll;
+    position: fixed;
+    color: #f9fffe;
+    background-color: rgba(11, 11, 12, 0.79);
+}
+.cocktailInfoPage::-webkit-scrollbar {
+
+    width: 0.70rem;
+    background: #ffeed6;
+}
+
+.cocktailInfoPage::-webkit-scrollbar-track {
+    background: #181202;
+
+
+}
+
+.cocktailInfoPage::-webkit-scrollbar-thumb {
+    border-radius: 100vh;
+    background: #181202;
+    border:2px solid #ffeed6;
+}
+
+#CloseInfoPage{
+    top: 0;
+    width: 100%;
+    padding: .5rem 0;
+    position: fixed;
+    font-size: 1.5em;
+    cursor: pointer;
+    background-color: #0b0b0c;
+    transition: 300ms;
+}
+#CloseInfoPage:hover{
+    background-color: #790c30;
+}
+
+.ingredientsWrapper{
+
+    ul{
+        text-align: center;
+        width: 50%;
+        margin: auto;
+    }
+}
+.instructionsWrapper{
+    margin:2rem;
 }
 
 @media only screen and (min-width: 600px) {
@@ -396,8 +455,14 @@ main {
         pointer-events: revert;
     }
     main {
+        filter: blur(0px);
         margin: 0;
+        transition: filter 300ms;
     }
-}
 
+}
+.blurClass{
+    filter: blur(30px);
+    transition: 300ms;
+}
   
