--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 :root {
   font-family: "Montserrat Alternates", sans-serif;
   font-weight: 400;
@@ -8,6 +9,15 @@
   --primary: #ffeed6;
   --secondary: #790c30;
   --accent: #00ff8c;
+}
+
+
+.material-symbols-outlined {
+  font-variation-settings:
+          'FILL' 0,
+          'wght' 400,
+          'GRAD' 0,
+          'opsz' 24
 }
 
 body {
