--- a/styles.css
+++ b/styles.css
@@ -430,6 +430,11 @@ main {
 #HomeDrinks{
   min-height: 35vh;
 }
+#search{
+  padding: 2em;
+  width:auto;
+  
+}
 
 @media only screen and (min-width: 600px) {
   .cocktailsData {
@@ -517,11 +522,16 @@ main {
   filter: blur(30px);
   transition: 300ms;
 }
+.button:hover{
+  background-color: #790c30;
+  color:#ffeed6;
 
+
+}
 .button{
   width: 100%;
-  background-color:white;
-  color:  rgba(24, 18, 2, 0.76);
+  background-color:#ffeed6;
+  color:  #790c30;
   font-size: large;
   font-weight: bolder;
   padding: 14px 20px;
@@ -536,6 +546,17 @@ main {
   padding: 12px 20px;
   margin: 8px 0;
   display: inline-block;
-  border: 1px solid #ccc;
+  border: 5px solid transparent;
   box-sizing: border-box;
+  background-color: #790c30;
+  color:#ffeed6;
+  transition: 0.5s ease-in;
+
+}
+.inputLettre:focus{
+  background-color: #ffeed6;
+  color:#790c30;
+  font-weight: bolder;
+  border-color: #790c30;
+  border-radius: 100px;
 }
