Remove unnecessary SVG assets
Three SVG files (`blob-scene-haikei.svg`, `blob-scene-haikei (1).svg`, and `blobBgPurp.svg`) have been deleted. They were no longer required, contributing to an uncluttered codebase and reducing overall project size.

--- a/styles.css
+++ b/styles.css
@@ -137,15 +137,16 @@ main {
   width: 2rem;
 }
 
+
 .page {
   margin: 0;
   display: none;
   transition: 0.5s;
 }
-
 .active {
-  width: 100%;
 
+  width: auto;
+  padding: 5rem;
   margin: 0;
   display: block;
   background-color: rgba(24, 18, 2, 0.76);
@@ -153,6 +154,8 @@ main {
   opacity: 1;
   transition: 0.5s;
 }
+
+
 .cockWrapper {
 }
 .cocktails {
@@ -433,7 +436,7 @@ main {
 #search{
   padding: 2em;
   width:auto;
-  
+
 }
 
 @media only screen and (min-width: 600px) {
@@ -522,13 +525,9 @@ main {
   filter: blur(30px);
   transition: 300ms;
 }
-.button:hover{
-  background-color: #790c30;
-  color:#ffeed6;
 
-
-}
 .button{
+  border-radius: 30px 20px 30px 20px;
   width: 100%;
   background-color:#ffeed6;
   color:  #790c30;
@@ -537,11 +536,17 @@ main {
   padding: 14px 20px;
   margin: 8px 0;
   border: none;
- 
+  transition: 250ms;
   cursor: pointer;
+}
+.button:hover{
+  background-color: #790c30;
+  color:#ffeed6;
+  border-radius: 50px;
 
 }
 .inputLettre{
+  outline: 4px solid rgba(0, 0, 0, 0);
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -550,10 +555,11 @@ main {
   box-sizing: border-box;
   background-color: #790c30;
   color:#ffeed6;
-  transition: 0.5s ease-in;
-
+  transition: 350ms ease-out;
+  border-radius: 15px;
 }
 .inputLettre:focus{
+  outline: 4px solid #ffeed6;
   background-color: #ffeed6;
   color:#790c30;
   font-weight: bolder;
